bpy.app.handlers.render_stats doesn't appear to work #30416

Closed
opened 2012-03-01 19:23:01 +01:00 by Jason van Gumster · 4 comments

%%%Using the example in the Blender wiki (http://wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.60/Python#Callbacks), the expected results are that "Thanks for calling!" should print after the stats get printed. Currently, nothing happens. The stats get printed without the appended text and Blender proceeds normally.%%%

%%%Using the example in the Blender wiki (http://wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.60/Python#Callbacks), the expected results are that "Thanks for calling!" should print after the stats get printed. Currently, nothing happens. The stats get printed without the appended text and Blender proceeds normally.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%It seems to work when running blender in background mode, and that was the original purpose of this, for render farm clients to report progress. I've done one tweak in svn now, to also call this after it prints "Saved: /tmp..", which it didn't do before.

Further I'm not sure what you are intending to use this for. It still doesn't get called now when it draw render stats in the user interface only, but I'm not sure if that would be expected behavior.%%%

%%%It seems to work when running blender in background mode, and that was the original purpose of this, for render farm clients to report progress. I've done one tweak in svn now, to also call this after it prints "Saved: /tmp..", which it didn't do before. Further I'm not sure what you are intending to use this for. It still doesn't get called now when it draw render stats in the user interface only, but I'm not sure if that would be expected behavior.%%%

%%%No activity in more than week. Current behavior seems logical for me and i'm not sure it'll be good idea to call a callback on every statistics draw.
Will assume this issue resolved. Probably callbacks might be enhanced further but wouldn't consider this is a bug.
Thanks for the report and patch! :)%%%

%%%No activity in more than week. Current behavior seems logical for me and i'm not sure it'll be good idea to call a callback on every statistics draw. Will assume this issue resolved. Probably callbacks might be enhanced further but wouldn't consider this is a bug. Thanks for the report and patch! :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#30416
No description provided.