Fix related to #30416: python render_stats handler now also gets called when the saved file message is printed.